[gd_scene load_steps=6 format=3 uid="uid://c0ucsn0urlrl0"]

[ext_resource type="Theme" uid="uid://dnjawm4lkym68" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_no42w"]
[ext_resource type="Texture2D" uid="uid://b261vuqbyde61" path="res://addons/HTNDomainManager/PluginSystem/Icons/Trash.svg" id="2_bj0u4"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/ConditionEditor/ConditionLine.gd" id="2_m14ko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21mnt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1fc2m"]

[node name="ConditionLine" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_no42w")
script = ExtResource("2_m14ko")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_bj0u4")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_21mnt")

[node name="WorldStateLineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "World State"

[node name="HSeparator2" type="HSeparator" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_1fc2m")

[node name="CompareOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
item_count = 5
selected = 0
allow_reselect = true
popup/item_0/text = "Greater Than"
popup/item_0/id = 0
popup/item_1/text = "Less Than"
popup/item_1/id = 1
popup/item_2/text = "Equal To"
popup/item_2/id = 2
popup/item_3/text = "Greater Than or Equal To"
popup/item_3/id = 3
popup/item_4/text = "Less Than or Equal To"
popup/item_4/id = 4

[node name="TypeOptionButton" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
item_count = 7
selected = 0
allow_reselect = true
popup/item_0/text = "Boolean"
popup/item_0/id = 0
popup/item_1/text = "Int"
popup/item_1/id = 1
popup/item_2/text = "Float"
popup/item_2/id = 2
popup/item_3/text = "String"
popup/item_3/id = 3
popup/item_4/text = "Vector2"
popup/item_4/id = 4
popup/item_5/text = "Vector3"
popup/item_5/id = 5
popup/item_6/text = "World State"
popup/item_6/id = 6

[node name="DataFields" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IsTrueToggle" type="CheckButton" parent="DataFields"]
unique_name_in_owner = true
visible = false
layout_mode = 2
button_pressed = true
text = "Is True?"

[node name="StringValue" type="LineEdit" parent="DataFields"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VectorFields" type="HBoxContainer" parent="DataFields"]
unique_name_in_owner = true
layout_mode = 2

[node name="XValue" type="SpinBox" parent="DataFields/VectorFields"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="YValue" type="SpinBox" parent="DataFields/VectorFields"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true

[node name="ZValue" type="SpinBox" parent="DataFields/VectorFields"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true

[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="text_changed" from="WorldStateLineEdit" to="." method="_on_world_state_line_edit_text_changed"]
[connection signal="item_selected" from="CompareOptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="TypeOptionButton" to="." method="_on_type_option_button_item_selected"]
